<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="divide">/</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="bnt8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnPoint">.</string>
    <string name="btnMultiply">*</string>
    <string name="btnMinus">-</string>
    <string name="btnPlus">+</string>
    <string name="btnEqually">=</string>
    <string name="theme_one">One</string>
    <string name="theme_two">Two</string>
    <string name="theme_three">Three</string>
    <string name="theme_four">Four</string>
</resources>