<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background_2"
    tools:context=".ui.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_settings_button"
        app:icon="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInput"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2+2" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/BtnStyle"
            android:text="@string/clear"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLeft"
            style="@style/BtnStyle"
            android:text="@string/left"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRight"
            style="@style/BtnStyle"
            android:text="@string/right"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDivide"
            style="@style/BtnStyle"
            android:text="@string/divide"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            style="@style/BtnStyle"
            android:text="@string/btn1"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            style="@style/BtnStyle"
            android:text="@string/btn2"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            style="@style/BtnStyle"
            android:text="@string/btn3"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultiply"
            style="@style/BtnStyle"
            android:text="@string/btnMultiply"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            style="@style/BtnStyle"
            android:text="@string/btn4"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            style="@style/BtnStyle"
            android:text="@string/btn5"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn6"
            style="@style/BtnStyle"
            android:text="@string/btn6"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMinus"
            style="@style/BtnStyle"
            android:layout_columnWeight="1"
            android:text="@string/btnMinus"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn7"
            style="@style/BtnStyle"
            android:text="@string/btn7"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn8"
            style="@style/BtnStyle"
            android:text="@string/bnt8"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn9"
            style="@style/BtnStyle"
            android:text="@string/btn9"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlus"
            style="@style/BtnStyle"
            android:text="@string/btnPlus"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn0"
            style="@style/BtnStyle"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:text="@string/btn0"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDot"
            style="@style/BtnStyle"
            android:text="@string/btnPoint"
            app:cornerRadius="@dimen/button_radius" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEqually"
            style="@style/BtnStyle"
            android:text="@string/btnEqually"
            app:cornerRadius="@dimen/button_radius" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>